--- a/arch/arm64/configs/ether_eas_defconfig
+++ b/arch/arm64/configs/ether_eas_defconfig
@@ -48,6 +48,10 @@ CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
 # CONFIG_POSIX_MQUEUE is not set
 # CONFIG_FHANDLE is not set
+CONFIG_SCHED_TUNE=y
+CONFIG_CGROUP_SCHEDTUNE=y
+CONFIG_CPU_FREQ_GOV_SCHED=y
+CONFIG_RT_MUTEXES=y
 CONFIG_AUDIT=y
 # CONFIG_AUDIT_LOGINUID_IMMUTABLE is not set
 
@@ -113,10 +117,10 @@ CONFIG_RESOURCE_COUNTERS=y
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
-CONFIG_CFS_BANDWIDTH=y
+CONFIG_CFS_BANDWIDTH=n
 CONFIG_RT_GROUP_SCHED=y
 # CONFIG_BLK_CGROUP is not set
-CONFIG_SCHED_HMP=y
+CONFIG_SCHED_HMP=n
 # CONFIG_CHECKPOINT_RESTORE is not set
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
