--- a/arch/arm64/boot/dts/fih/nbq/dsi-panel-ctc52-nbq-otm1926c-1080p-cmd.dtsi
+++ b/arch/arm64/boot/dts/fih/nbq/dsi-panel-ctc52-nbq-otm1926c-1080p-cmd.dtsi
@@ -85,7 +85,7 @@
 		qcom,mdss-dsi-dma-trigger = "trigger_sw";
 		qcom,mdss-dsi-mdp-trigger = "none";
 		qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_wled";
-		qcom,mdss-dsi-reset-sequence = <1 10>, <0 1>, <1 20>;
+		qcom,mdss-dsi-reset-sequence = <0 10>, <1 3>, <0 1>, <1 20>; // TheCrazyLex@Pa fixing reset sequence delays
 		qcom,mdss-pan-physical-width-dimension = <65>;
 		qcom,mdss-pan-physical-height-dimension = <115>;
 		qcom,mdss-dsi-pan-enable-dynamic-fps;
