--- a/arch/arm64/configs/lineageos_ether_defconfig
+++ b/arch/arm64/configs/lineageos_ether_defconfig
@@ -32,6 +32,9 @@ CONFIG_PROFILING=y
 CONFIG_CC_STACKPROTECTOR_REGULAR=y
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
 CONFIG_PARTITION_ADVANCED=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
+CONFIG_DEFAULT_NOOP=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8994=y
 CONFIG_ARCH_MSM8994_V1_TLBI_WA=y
