--- a/arch/arm64/configs/lineageos_ether_defconfig
+++ b/arch/arm64/configs/lineageos_ether_defconfig
@@ -297,7 +297,7 @@ CONFIG_MSM_BCL_PERIPHERAL_CTL=y
 CONFIG_FIH_DISABLE_SMBCHG_PARALLEL=y
 CONFIG_FIH_BATTERY=y
 CONFIG_POWER_RESET_MSM=y
-CONFIG_MSM_DLOAD_MODE=y
+CONFIG_MSM_PRESERVE_MEM=y
 CONFIG_MSM_PM=y
 CONFIG_APSS_CORE_EA=y
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
