--- a/arch/arm64/boot/dts/fih/msm8992_nbq_pvt.dts
+++ b/arch/arm64/boot/dts/fih/msm8992_nbq_pvt.dts
@@ -18,7 +18,8 @@
 #include "msm8992-bus.dtsi"
 #include "msm-pmi8994.dtsi"
 #include "msm8992-regulator.dtsi"
-#include "msm8992-mtp-nbq-pvt.dtsi"
+#include "msm8992-mtp-nbq.dtsi"
+#include "fih/nbq/msm8992-camera-sensor-mtp-nbq.dtsi"
 #include "fih/nbq/msm8992_nbq_pvt.dtsi"
 #include "fih/nbq/nfc_nxp-pn547.dtsi"
 #include "fih/nbq/nbq-f1-touch-evt1c.dtsi"
