--- a/arch/arm64/configs/electron_defconfig
+++ b/arch/arm64/configs/electron_defconfig
@@ -250,17 +250,15 @@ CONFIG_BLOCK_COMPAT=y
 #
 # IO Schedulers
 #
-CONFIG_IOSCHED_NOOP=y
+# CONFIG_IOSCHED_NOOP is not set
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 # CONFIG_IOSCHED_ROW is not set
 CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_DEFAULT_DEADLINE is not set
-# CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_CFQ is not set
 CONFIG_DEFAULT_MAPLE=y
-# CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="maple"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -525,9 +523,7 @@ CONFIG_TCP_CONG_HYBLA=y
 # CONFIG_TCP_CONG_VENO is not set
 # CONFIG_TCP_CONG_YEAH is not set
 # CONFIG_TCP_CONG_ILLINOIS is not set
-# CONFIG_DEFAULT_BIC is not set
 # CONFIG_DEFAULT_CUBIC is not set
-# CONFIG_DEFAULT_HTCP is not set
 # CONFIG_DEFAULT_HYBLA is not set
 CONFIG_DEFAULT_WESTWOOD=y
 # CONFIG_DEFAULT_RENO is not set
@@ -3542,7 +3538,7 @@ CONFIG_DEVFREQ_GOV_CPUFREQ=y
 CONFIG_DEVFREQ_GOV_MSM_ADRENO_TZ=y
 CONFIG_MSM_BIMC_BWMON=y
 CONFIG_DEVFREQ_GOV_MSM_GPUBW_MON=y
-# CONFIG_ADRENO_IDLER is not set
+CONFIG_ADRENO_IDLER=y
 # CONFIG_DEVFREQ_GOV_MSM_CPUFREQ is not set
 CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 # CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON is not set
