--- a/arch/arm64/configs/ether_eas_defconfig
+++ b/arch/arm64/configs/ether_eas_defconfig
@@ -438,7 +438,7 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_GOV_SCHED=y
-CONFIG_CPU_BOOST=y
+# CONFIG_CPU_BOOST is not set
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
 #
