--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -127,6 +127,15 @@ config CPU_FREQ_DEFAULT_GOV_SCHED
 	  cpu frequency from the scheduler as per-entity load tracking
 	  statistics are updated.
 
+config CPU_FREQ_DEFAULT_GOV_ELECTROSCHED
+	bool "electrosched"
+	select CPU_FREQ_GOV_ELECTROSCHED
+	select CPU_FREQ_GOV_PERFORMANCE
+	help
+	  Use the CPUfreq governor 'electrosched' as default. This scales
+	  cpu frequency from the scheduler as per-entity load tracking
+	  statistics are updated.
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -231,6 +240,22 @@ config CPU_FREQ_GOV_SCHED
 	select CPU_FREQ_GOV_COMMON
 	help
 	  'sched' - this governor scales cpu frequency from the
+	  scheduler as a function of cpu capacity utilization. It does
+	  not evaluate utilization on a periodic basis (as ondemand
+	  does) but instead is invoked from the completely fair
+	  scheduler when updating per-entity load tracking statistics.
+	  Latency to respond to changes in load is improved over polling
+	  governors due to its event-driven design.
+
+	  If in doubt, say N.
+
+config CPU_FREQ_GOV_ELECTROSCHED
+	tristate "'electrosched' cpufreq governor"
+	depends on CPU_FREQ
+	default y
+	select CPU_FREQ_GOV_COMMON
+	help
+	  'electrosched' - this governor scales cpu frequency from the
 	  scheduler as a function of cpu capacity utilization. It does
 	  not evaluate utilization on a periodic basis (as ondemand
 	  does) but instead is invoked from the completely fair
